https://bugs.webkit.org/show_bug.cgi?id=48444

Reviewed by Adam Roben.

Fix the dirty rect checks in RenderBoxLineList, InlineFlowBox, InlineTextBox.  They were still assuming horizontal-tb writing-mode.
This patch makes the checks directionally abstract and also refactors the checks in RenderLineBoxList to share code.

No tests yet, since the invalidation code for inlines still assumes horizontal-tb.  That will be fixed in a follow-up bug,
and then repaint tests will be easy to write.

* rendering/InlineBox.cpp:
(WebCore::InlineBox::adjustForFlippedBlocksWritingMode):
* rendering/InlineBox.h:
* rendering/InlineFlowBox.cpp:
(WebCore::InlineFlowBox::paint):
* rendering/InlineTextBox.cpp:
(WebCore::InlineTextBox::paint):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::convertFromFlippedWritingMode):
* rendering/RenderBox.h:
* rendering/RenderLineBoxList.cpp:
(WebCore::RenderLineBoxList::rangeIntersectsDirtyRect):
(WebCore::RenderLineBoxList::anyLineIntersectsDirtyRect):
(WebCore::RenderLineBoxList::lineIntersectsDirtyRect):
(WebCore::RenderLineBoxList::paint):
(WebCore::RenderLineBoxList::hitTest):
* rendering/RenderLineBoxList.h:



Canonical link: https://commits.webkit.org/61421@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70917 268f45cc-cd09-0410-ab3c-d52691b4dbfc